--- a/StoryboardPratices/StoryboardPratices/StoryBoards/Base.lproj/Main.storyboard
+++ b/StoryboardPratices/StoryboardPratices/StoryBoards/Base.lproj/Main.storyboard
@@ -1,38 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Logged out-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StoryboardPratices" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Logged out" id="BYZ-38-t0r" customClass="LoggedOutViewController" customModule="StoryboardPratices" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeb-Ek-3zK">
-                                <rect key="frame" x="186" y="437.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" image="Rectangle01" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="etV-z7-fkh">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="656"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pJI-vq-1BZ">
+                                <rect key="frame" x="10" y="656" width="394" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yik-HD-1PE">
+                                        <rect key="frame" x="0.0" y="15" width="192" height="50"/>
+                                        <state key="normal" title="LOG IN">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ja5-BZ-M5p">
+                                        <rect key="frame" x="202" y="15" width="192" height="50"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <state key="normal" title="REGISTER">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="yik-HD-1PE" secondAttribute="bottom" constant="15" id="8PW-m9-qaV"/>
+                                    <constraint firstItem="yik-HD-1PE" firstAttribute="top" secondItem="pJI-vq-1BZ" secondAttribute="top" constant="15" id="KZu-9L-3jb"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ja5-BZ-M5p" secondAttribute="bottom" constant="15" id="Px4-b1-9iN"/>
+                                    <constraint firstItem="Ja5-BZ-M5p" firstAttribute="top" secondItem="pJI-vq-1BZ" secondAttribute="top" constant="15" id="akQ-6O-qH3"/>
+                                </constraints>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="logoPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="VMH-Xe-iTM">
+                                <rect key="frame" x="155.66666666666666" y="354.33333333333331" width="102.99999999999997" height="27.666666666666686"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Oeb-Ek-3zK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3UB-S1-HeE"/>
-                            <constraint firstItem="Oeb-Ek-3zK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ENQ-HQ-3SP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pJI-vq-1BZ" secondAttribute="bottom" id="2n2-z5-Ayi"/>
+                            <constraint firstItem="etV-z7-fkh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="4G0-00-az6"/>
+                            <constraint firstItem="VMH-Xe-iTM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HH7-nr-tWL"/>
+                            <constraint firstItem="VMH-Xe-iTM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MWm-Zj-Sgz"/>
+                            <constraint firstItem="pJI-vq-1BZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="TtO-TB-uoc"/>
+                            <constraint firstItem="pJI-vq-1BZ" firstAttribute="top" secondItem="etV-z7-fkh" secondAttribute="bottom" id="dX5-C5-z61"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pJI-vq-1BZ" secondAttribute="trailing" constant="10" id="gBX-05-ME6"/>
+                            <constraint firstItem="etV-z7-fkh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jOc-qc-LAd"/>
+                            <constraint firstItem="etV-z7-fkh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ma9-Pk-dti"/>
+                            <constraint firstItem="etV-z7-fkh" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-80" id="oFB-Pf-Chh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="91"/>
+            <point key="canvasLocation" x="137.68115942028987" y="89.673913043478265"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Rectangle01" width="187.5" height="353.5"/>
+        <image name="logoPhoto" width="103" height="27.5"/>
+    </resources>
 </document>
